[tool.poetry]
name = "attack-project-stats"
version = "1.2"
description = ""
authors = ["Kaito Sekiya"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"
lxml = "^4.9.3"
html5lib = "^1.1"
beautifulsoup4 = "^4.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
